# ioef-cmod

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cmod-readme.md  docker-compose.yml  make-macosx-app.sh  make-macosx-ub2.sh  new-filesystem-design.md  new-filesystem-readme.md
.github/: FUNDING.yml  README.md
.github/workflows/: build.yml  docker-image.yml
cmake/: basegame.cmake  client.cmake  eliteforce.cmake  identity.cmake  renderer_common.cmake  renderer_gl1.cmake  renderer_gl2.cmake  server.cmake  shared_sources.cmake
cmake/compilers/: gnu.cmake  msvc.cmake
cmake/libraries/: curl.cmake  opus.cmake  sdl.cmake
cmake/utils/: disable_warnings.cmake
code/botlib/: be_aas_file.c  be_aas_main.c  be_aas_route.c  be_ai_chat.c  be_ai_goal.c  be_ai_weap.c  be_ea.c  be_interface.c  botlib.h  l_log.c
code/cgame/: cg_draw.c  cg_local.h  cg_public.h  cg_weapons.c
code/client/: cl_avi.c  cl_cgame.c  cl_console.c  cl_curl.c  cl_http.h  cl_http_curl.c  cl_http_windows.c  cl_input.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  snd_codec.c  snd_codec.h  snd_codec_wav.c  snd_dma.c  snd_local.h  snd_mem.c  snd_mix.c  snd_openal.c
code/cmod/: aspect_correct.c  cmod_auto_brightness.c  cmod_brightshift.c  cmod_cmd.c  cmod_crosshair.c  cmod_crosshair_builtins.c  cmod_cvar.c  cmod_cvar_defs.h  cmod_defs.h  cmod_fbo.c  cmod_logging.c  cmod_map_adjust.c  cmod_misc.c  cmod_misc.h  snd_codec_mp3.c  vm_extensions.c
code/cmod/mad/: config.h  mad.h  mad_bit.c  mad_decoder.c  mad_fixed.c  mad_frame.c  mad_layer12.c  mad_layer3.c  mad_madhuffman.c  mad_stream.c  mad_synth.c  mad_timer.c  mad_version.c
code/cmod/server/: sv_cmd_tools.c  sv_maptable.c  sv_misc.c  sv_misc.h  sv_record_common.c  sv_record_convert.c  sv_record_local.h  sv_record_main.c  sv_record_spectator.c  sv_record_writer.c  sv_voting_action.c  sv_voting_local.h  (+1 more)
code/filesystem/: fs_commands.c  fs_download.c  fs_fileio.c  fs_filelist.c  fs_lookup.c  fs_main.c  fs_misc.c  fs_reference.c  fs_trusted_vms.c  fslocal.h  fspublic.h
code/game/: bg_lib.h  bg_pmove.c  bg_public.h  g_active.c  g_combat.c  g_local.h  g_public.h
code/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_trace.c  cmd.c  common.c  cvar.c  files.c  msg.c  net_chan.c  net_ip.c  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  surfaceflags.h  unzip.c  vm.c  vm_armv7l.c  vm_interpreted.c  vm_local.h  vm_powerpc.c  vm_sparc.c  vm_x86.c
code/renderercommon/: qgl.h  tr_common.h  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
code/renderergl1/: tr_backend.c  tr_bsp.c  tr_cmds.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_model.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c
code/renderergl2/: tr_backend.c  tr_bsp.c  tr_cmds.c  tr_glsl.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_surface.c
code/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_icon.h  sdl_input.c  sdl_snd.c
code/server/: server.h  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
code/sys/: sys_local.h  sys_main.c  sys_unix.c  sys_win32.c  win_resource.rc
code/ui/: ui_local.h  ui_shared.c
code/web/: client-config.json
docs/: build.md  client.md  installation.md  macos-codesign-notarization.txt  server.md
misc/: ci-macos-notarize.sh  lib-versions.sh  macos-dmg-setup.applescript.in  stvoyHM.icns  update-libs.sh
misc/linux/: q3a.service  server_compile.sh  start_server.sh
misc/macos/: build-macos-sdl.sh  ci-macos-import-codesign-cert.sh
misc/msvc12/: opengl1.vcxproj  opengl2.vcxproj  quake3.vcxproj  quake3.vcxproj.filters
misc/nsis/: Makefile
(+17 files in other folders)
